@@ -25,7 +25,7 @@
         "ConstructionPlannerContinued >= 3.0.0",
         "CopyPasteModules >= 0.1.1",
         "CursorEnhancements >= 2.1.1",
-        "EditorExtensions >= 1.13.4",
+        "EditorExtensions >= 2.2.4",
         "EnableResearchQueue >= 1.0.4",
         "even-distribution >= 1.0.10",
         "extended-descriptions >= 1.0.16",
