@@ -14,9 +14,11 @@ Date: 9999-99-99
     - Bumped Color Coded Planners to latest version.
     - Bumped Construction Planner Continued to latest version.
     - Bumped Cursor Enhancements to latest version.
+    - Bumped Editor Extensions to latest version.
     - Enable use of artillery cluster remote for singular shots.
     - Modpack controls configuration for Blueprint Tools. SHIFT + arrows for nudging the blueprint, CONTROL + arrows for nudging blueprint grid, and CONTROL + SHIFT + arrow for nudging blueprint book grid.
     - Modpack controls configuration for Cursor Enhancements. Quick craft key binding is disabled (Crafting Tools provides for better quantity control).
+    - Modpack controls configuration for Editor Extensions. Editor can be opened with CONTROL + E.
   Features:
   Bugfixes:
 ---------------------------------------------------------------------------------------------------
